# mx-docsrs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.claude/: CLAUDE.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/docsrs/: Cargo.toml
crates/docsrs-core/: Cargo.toml
crates/docsrs-core/assets/: SKILL.md
crates/docsrs-core/src/: cli.rs  crate_spec.rs  docfetch.rs  lib.rs  skill.rs  util.rs  version_resolver.rs
crates/docsrs-core/src/doc/: doc_formatter.rs  public_item.rs  render.rs
crates/docsrs-core/src/doc/children/: enum_children.rs  mod.rs  module_children.rs  struct_children.rs  trait_children.rs
crates/docsrs-core/src/list/: list_item.rs  mod.rs
crates/docsrs-core/tests/: clear_cache.rs  common.rs  network_errors.rs  network_filter_modes.rs  network_flags.rs  network_item_kinds.rs  network_output_modes.rs  network_spec_parsing.rs  network_version_resolution.rs  output_coherence.rs  reexports.rs  skill.rs  visibility.rs
crates/docsrs-core/tests/snapshots/: cli__help_shows_usage.snap
crates/docsrs-mcp/: Cargo.toml  build.rs
crates/docsrs-mcp/src/: lib.rs
crates/docsrs-mcp/tests/: tools.rs
crates/docsrs-mcp/tests/snapshots/: tools__lookup_docs_crate.snap  tools__lookup_docs_with_filter.snap
crates/docsrs-showcase/: Cargo.toml
crates/docsrs-showcase/src/: main.rs
crates/docsrs/disabled-tests/: common.rs  test_reexports.rs
crates/docsrs/src/: cli.rs  color.rs  colorizer.rs  crate_spec.rs  docfetch.rs  lib.rs  main.rs  terminal_render.rs  version_resolver.rs
crates/docsrs/src/doc/: crate_wrapper.rs  doc_formatter.rs  extract.rs  impl_kind.rs  intermediate_public_item.rs  item_processor.rs  link_resolver.rs  list_item.rs  markdown_formatter.rs  matcher.rs  mod.rs  nameable_item.rs  output.rs  path_component.rs  public_item.rs  render.rs  search.rs  syntax_highlighter.rs  tokens.rs  unprocessed_item.rs
crates/docsrs/src/doc/children/: enum_children.rs  mod.rs  module_children.rs  struct_children.rs  trait_children.rs
crates/docsrs/src/ext/: collections_ext.rs  item_ext.rs  mod.rs  rustdoc_ext.rs
crates/docsrs/src/fmt/: mod.rs  output.rs  terminal.rs  tokens.rs
crates/docsrs/src/list/: list_item.rs  mod.rs
crates/docsrs/src/proc/: crate_wrapper.rs  intermediate_public_item.rs  item_processor.rs  mod.rs  nameable_item.rs  path_component.rs  unprocessed_item.rs
crates/docsrs/tests/: cli.rs  cli_test.rs  common.rs  integration_test.rs  reexports.rs  test_reexports.rs  test_visibility.rs  visibility.rs
crates/docsrs/tests/snapshots/: cli__help_shows_usage.snap  test_reexports__reexports_are_in_json.snap
crates/jsondoc/: Cargo.toml
crates/jsondoc/src/: impl_kind.rs  jsondoc.rs  jsondoc_item.rs  lib.rs  nameable_item.rs  unprocessed_item.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/mcp/tests/snapshots/: tools__lookup_docs_with_filter.snap
crates/rustdoc-analyzer/: Cargo.toml
crates/rustdoc-analyzer/src/: corpus.rs  crate_list.rs  doc_extractor.rs  docfetch.rs  lib.rs  main.rs  markdown_analyzer.rs  stats.rs
crates/rustdoc-fmt/: Cargo.toml
crates/rustdoc-fmt/src/: colorizer.rs  lib.rs  link_resolver.rs  main.rs  markdown.rs  output.rs  tokens.rs
crates/rustdoc-fmt/tests/: format_tests.rs
crates/test-coherence/: Cargo.toml
crates/test-coherence/src/: lib.rs
crates/test-reexports/: Cargo.toml
crates/test-reexports/src/: lib.rs
crates/test-visibility/: Cargo.toml
crates/test-visibility/src/: lib.rs
scripts/: generate-test-docs.sh
src/: cli.rs  crate_spec.rs  docfetch.rs  docrender.rs  main.rs  terminal_render.rs  version_resolver.rs
tests/: integration_test.rs
