[workspace]
resolver = "2"
members = [
    "crates/docsrs",
    "crates/test-visibility",
    "crates/test-reexports",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.51", features = ["derive"] }
cargo_metadata = "0.23.0"
anyhow = "1.0.99"
ureq = "3.0.12"
rustdoc-types = "0.56.0"
zstd = "0.13.3"
serde_json = "1.0"
directories = "6.0.0"
colored = "3.0.0"
pulldown-cmark = "0.13.0"
