[package]
name = "mx-docsrs"
version = "0.1.0"
edition.workspace = true

[lib]
name = "mx_docsrs"
path = "src/lib.rs"

[[bin]]
name = "docsrs"
path = "src/main.rs"

[dependencies]
clap.workspace = true
cargo_metadata.workspace = true
anyhow.workspace = true
ureq.workspace = true
rustdoc-types.workspace = true
zstd.workspace = true
serde_json.workspace = true
directories.workspace = true
colored.workspace = true
rustdoc-fmt = { path = "../rustdoc-fmt" }

[dev-dependencies]
insta.workspace = true
