[package]
name = "docsrs"
version = "0.1.0"
edition.workspace = true
description = "Fast Rust documentation lookup for CLI and AI assistants"
repository = "https://github.com/human-solutions/mx-docsrs"
license = "MIT OR Apache-2.0"

[[bin]]
name = "docsrs"
path = "src/main.rs"

[dependencies]
docsrs-core = { path = "../docsrs-core" }
docsrs-mcp = { path = "../docsrs-mcp" }
rmcp.workspace = true
tokio.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
