[package]
name = "docsrs-mcp"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "docsrs-mcp"
path = "src/main.rs"

[dependencies]
mx-docsrs = { path = "../docsrs" }
rmcp.workspace = true
tokio.workspace = true
schemars.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
colored.workspace = true
rmcp = { workspace = true, features = ["client"] }
