[package]
name = "rustdoc-analyzer"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "rustdoc-analyzer"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rustdoc-types.workspace = true
pulldown-cmark.workspace = true
ureq.workspace = true
zstd.workspace = true
directories.workspace = true
