[package]
name = "rustdoc-fmt"
version = "0.1.0"
edition.workspace = true

[dependencies]
colored.workspace = true
syntect.workspace = true
terminal-colorsaurus.workspace = true
pulldown-cmark.workspace = true

[dev-dependencies]
insta.workspace = true

[[bin]]
name = "rustdoc-fmt-demo"
path = "src/main.rs"
